--- a/src/composer.json
+++ b/src/composer.json
@@ -21,6 +21,7 @@
         "symfony/security-csrf": "6.2.*",
         "symfony/twig-bundle": "6.2.*",
         "symfony/validator": "6.2.*",
+        "symfony/webpack-encore-bundle": "^2.0",
         "symfony/yaml": "6.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
