--- a/src/config/services.yaml
+++ b/src/config/services.yaml
@@ -22,3 +22,12 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    app.menu_builder:
+        class: App\Menu\Builder
+
+    app.main_menu:
+        class: Knp\Menu\MenuItem # the service definition requires setting the class
+        factory: [ "@app.menu_builder", mainMenu ]
+        tags:
+            - { name: knp_menu.menu, alias: main }
