Implement logger time and user using trait

--- a/src/config/services.yaml
+++ b/src/config/services.yaml
@@ -31,3 +31,13 @@ services:
         factory: [ "@app.menu_builder", mainMenu ]
         tags:
             - { name: knp_menu.menu, alias: main }
+
+    App\Listeners\TimeLoggerListener:
+        tags:
+            - { name: doctrine.event_listener, event: prePersist }
+            - { name: doctrine.event_listener, event: preUpdate }
+
+    App\Listeners\UserLoggerListener:
+        tags:
+            - { name: doctrine.event_listener, event: prePersist }
+            - { name: doctrine.event_listener, event: preUpdate }
