Change user logger to owner, create comment voter and some improvements

--- a/src/config/packages/security.yaml
+++ b/src/config/packages/security.yaml
@@ -39,6 +39,7 @@ security:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/mobile-company, roles: ROLE_USER }
         - { path: ^/mobile-phone, roles: ROLE_USER }
+        - { path: ^/comment, roles: ROLE_USER }
 
 when@test:
     security:
