--- a/src/config/services.yaml
+++ b/src/config/services.yaml
@@ -35,7 +35,6 @@ services:
             - { name: doctrine.event_listener, event: prePersist }
             - { name: doctrine.event_listener, event: preUpdate }
 
-    App\Listeners\UserLoggerListener:
+    App\Listeners\OwnerListener:
         tags:
             - { name: doctrine.event_listener, event: prePersist }
-            - { name: doctrine.event_listener, event: preUpdate }
