--- a/src/composer.json
+++ b/src/composer.json
@@ -22,6 +22,7 @@
         "symfony/runtime": "6.2.*",
         "symfony/security-bundle": "6.2.*",
         "symfony/security-csrf": "6.2.*",
+        "symfony/translation": "6.2.*",
         "symfony/twig-bundle": "6.2.*",
         "symfony/validator": "6.2.*",
         "symfony/webpack-encore-bundle": "^2.0",
