--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,16 @@ services:
     volumes:
       - ./docker/mysql:/var/lib/mysql:delegated
     restart: always
+
+  mysql-test:
+    image: mariadb
+    ports:
+      - 3307:3306
+    environment:
+      - MYSQL_DATABASE=${DATABASE_NAME}_test
+      - MYSQL_USER=${DATABASE_USERNAME}
+      - MYSQL_PASSWORD=${DATABASE_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${DATABASE_ROOT_PASSWORD}
+    volumes:
+      - ./docker/mysql-test:/var/lib/mysql:delegated
+    restart: always
