--- a/src/.env
+++ b/src/.env
@@ -7,6 +7,7 @@
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+APP_SECRET='$ecretf0rt3st'
 
 DATABASE_URL="mysql://symfony:password@mysql:3306/symfony?serverVersion=mariadb-10.11.2"
 
