--- a/src/composer.json
+++ b/src/composer.json
@@ -28,7 +28,8 @@
         "symfony/webpack-encore-bundle": "^2.0",
         "symfony/yaml": "6.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "ext-openssl": "*"
     },
     "config": {
         "allow-plugins": {
