--- a/src/config/packages/security.yaml
+++ b/src/config/packages/security.yaml
@@ -41,6 +41,9 @@ security:
         - { path: ^/mobile-phone, roles: ROLE_USER }
         - { path: ^/comment, roles: ROLE_USER }
 
+    role_hierarchy:
+        ROLE_ADMIN: [ ROLE_USER, ROLE_COMPANY_OWNER, ROLE_EDITOR ]
+
 when@test:
     security:
         password_hashers:
