--- a/src/composer.json
+++ b/src/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-openssl": "*",
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
@@ -16,6 +17,7 @@
         "symfony/apache-pack": "^1.0",
         "symfony/console": "6.2.*",
         "symfony/dotenv": "6.2.*",
+        "symfony/expression-language": "6.2.*",
         "symfony/flex": "^2",
         "symfony/form": "6.2.*",
         "symfony/framework-bundle": "6.2.*",
@@ -28,8 +30,8 @@
         "symfony/webpack-encore-bundle": "^2.0",
         "symfony/yaml": "6.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
-        "ext-openssl": "*"
+        "twig/intl-extra": "^3.7",
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "allow-plugins": {
